# ai-news-pipeline

./: .gitignore  LICENSE  README.md  SKILL.md  config.yaml.example  pyproject.toml  requirements.txt  run.py
prompts/: agent-daily.md
schedules/: register-task.ps1  run-daily.ps1  run-daily.sh
src/ai_news_pipeline/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/ai_news_pipeline/analyzers/: __init__.py  paper_reviewer.py
src/ai_news_pipeline/collectors/: __init__.py  base.py  hn.py  rss.py
src/ai_news_pipeline/generators/: __init__.py  brief.py  daily_digest.py  knowledge_card.py  llm.py  news_extractor.py
src/ai_news_pipeline/processors/: __init__.py  llm_scorer.py  ranker.py
src/ai_news_pipeline/publishers/: __init__.py  wechat.py
