[project]
name = "ai-news-pipeline"
version = "0.1.0"
description = "Daily AI news collection, processing, article generation, and WeChat draft publishing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "feedparser>=6.0.11",
    "python-dateutil>=2.9.0",
    "tzdata>=2024.1",
    "Pillow>=10.0.0",
]

[project.scripts]
ai-news = "ai_news_pipeline.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
